--- a/docker/Dockerfile.sandbox
+++ b/docker/Dockerfile.sandbox
@@ -16,7 +16,7 @@
 # RUNTIME SUPPORT:
 #   - Python 3.x + pip
 #   - Node.js LTS + npm
-#   - OpenJDK + Maven/Gradle
+#   - OpenJDK + Maven
 #   - Go toolchain
 #   - Rust + Cargo
 #
@@ -32,11 +32,61 @@
 
 FROM ubuntu:22.04
 
-# Placeholder — runtime installations will be added here
-RUN apt-get update && apt-get install -y \
+ENV DEBIAN_FRONTEND=noninteractive
+
+# ---------------------------------------------------------------
+# Core utilities
+# ---------------------------------------------------------------
+RUN apt-get update && apt-get install -y --no-install-recommends \
     curl \
     git \
+    ca-certificates \
+    gnupg \
+    build-essential \
+    wget \
+    unzip \
     && rm -rf /var/lib/apt/lists/*
+
+# ---------------------------------------------------------------
+# Python 3 + pip + pytest
+# ---------------------------------------------------------------
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    python3 \
+    python3-pip \
+    python3-venv \
+    && ln -sf /usr/bin/python3 /usr/bin/python \
+    && pip3 install --no-cache-dir --upgrade pip \
+    && pip3 install --no-cache-dir pytest \
+    && rm -rf /var/lib/apt/lists/*
+
+# ---------------------------------------------------------------
+# Node.js 20 LTS + npm
+# ---------------------------------------------------------------
+RUN curl -fsSL https://deb.nodesource.com/setup_20.x | bash - \
+    && apt-get install -y --no-install-recommends nodejs \
+    && rm -rf /var/lib/apt/lists/*
+
+# ---------------------------------------------------------------
+# OpenJDK 17 + Maven
+# ---------------------------------------------------------------
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    openjdk-17-jdk-headless \
+    maven \
+    && rm -rf /var/lib/apt/lists/*
+
+# ---------------------------------------------------------------
+# Go 1.22
+# ---------------------------------------------------------------
+RUN wget -q https://go.dev/dl/go1.22.5.linux-amd64.tar.gz \
+    && tar -C /usr/local -xzf go1.22.5.linux-amd64.tar.gz \
+    && rm go1.22.5.linux-amd64.tar.gz
+ENV PATH="/usr/local/go/bin:${PATH}"
+
+# ---------------------------------------------------------------
+# Rust + Cargo
+# ---------------------------------------------------------------
+RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+ENV PATH="/root/.cargo/bin:${PATH}"
 
 WORKDIR /workspace
 
